[Module 5] Avoids layout shifts caused by dynamically appearing/disappearing scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@
     --content-width: 1200px;
 }
 
+html {
+    overflow-y: scroll;
+}
+
 body {
     background: url("src/assets/bg-content.jpg") no-repeat fixed;
     background-size: cover;
